src/human_study/program_19/python_err_msg.txt
File "./seq2parse/human_study/program_19/original.py", line 5
    x = int(input("digite um numero")
           ^
SyntaxError: '(' was never closed
